@@ -1,7 +1,7 @@
 Methods for calculating (usually) accurate numerical first and second
-order derivatives. Accurate calculations are done using 'Richardson”s'
+order derivatives. Accurate calculations are done using Richardson's
 extrapolation or, when applicable, a complex step derivative is
 available. A simple difference method is also provided. Simple
 difference is (usually) less accurate but is much quicker than
-'Richardson”s' extrapolation and provides a useful cross-check.
+Richardson's extrapolation and provides a useful cross-check.
 Methods are provided for real scalar and vector valued functions.
