@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.2 2018/07/28 14:40:50 brook Exp $
+# $NetBSD: Makefile,v 1.3 2019/07/31 20:03:25 brook Exp $
 
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/numDeriv/
@@ -8,10 +8,9 @@ COMMENT=	Accurate numerical derivatives
 LICENSE=	gnu-gpl-v2
 
 R_PKGNAME=	numDeriv
-R_PKGVER=	2016.8-1
+R_PKGVER=	2016.8-1.1
 
 USE_LANGUAGES+=	# none
 
-BUILDLINK_API_DEPENDS.R+=	R>=2.11.1
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
