@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3189 2019/07/31 20:01:41 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3190 2019/07/31 20:03:24 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5146,3 +5146,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated math/R-maps to 3.3.0 [brook 2019-07-31]
 	Updated math/R-mvtnorm to 1.0.11 [brook 2019-07-31]
 	Updated math/R-nloptr to 1.2.1 [brook 2019-07-31]
+	Updated math/R-numDeriv to 2016.8.1.1 [brook 2019-07-31]
